--- a/.github/workflows/e2e-mobile.yml
+++ b/.github/workflows/e2e-mobile.yml
@@ -1,4 +1,4 @@
-name: Mobile E2E Tests (Android + iOS Local)
+name: Expo Mobile E2E Tests (Maestro Local)
 
 on:
   workflow_dispatch:
@@ -7,103 +7,92 @@ jobs:
 
   android-e2e:
     name: Android E2E (Maestro Local)
-    runs-on: macOS-latest
+    runs-on: macos-latest
 
     steps:
-      - name: 📦 Checkout Repo
+      - name: Checkout Repo
         uses: actions/checkout@v4
 
-      - name: 📦 Setup Node
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
 
-      - name: 📦 Install Dependencies
-        run: npm install
-
-      - name: ☕ Setup Java
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      - name: 🤖 Build Android APK
+      - name: Install PNPM + Dependencies
         run: |
-          cd android
-          ./gradlew assembleRelease
+          npm install -g pnpm
+          pnpm install
 
-      - name: 📦 Install Maestro
+      - name: Install Maestro
+        run: pnpm run install-maestro
+
+      - name: Load Env Variables
         run: |
-          curl -Ls "https://get.maestro.mobile.dev" | bash
-          echo "$HOME/.maestro/bin" >> $GITHUB_PATH
+          echo "EXPO_PUBLIC_APP_ENV=development" >> $GITHUB_ENV
 
-      - name: 🚀 Run Android Emulator + Maestro
+      - name: Build Android Dev Client
+        run: pnpm android:development
+
+      - name: Start Emulator & Run Maestro
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 29
+          api-level: 34
+          arch: x86_64
           profile: Nexus 6
           emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim
           script: |
-            adb install android/app/build/outputs/apk/release/app-release.apk
+            adb install android/app/build/outputs/apk/debug/app-debug.apk
             maestro test .maestro/ \
-              --format junit \
-              --output android-report.xml \
-              --env=APP_ID=com.obytes.development
+              -e APP_ID=com.obytes.development \
+              --format html \
+              --output maestro-android-report.html
 
-      - name: 📤 Upload Android Test Report
-        if: always()
-        uses: actions/upload-artifact@v3
+      - name: Upload Android Report
+        uses: actions/upload-artifact@v4
         with:
-          name: android-e2e-report
-          path: android-report.xml
+          name: maestro-android-report
+          path: maestro-android-report.html
 
 
   ios-e2e:
     name: iOS E2E (Maestro Local)
-    runs-on: macOS-latest
+    runs-on: macos-latest
 
     steps:
-      - name: 📦 Checkout Repo
+      - name: Checkout Repo
         uses: actions/checkout@v4
 
-      - name: 📦 Setup Node
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
 
-      - name: 📦 Install Dependencies
-        run: npm install
-
-      - name: 🍏 Install Maestro
+      - name: Install PNPM + Dependencies
         run: |
-          curl -Ls "https://get.maestro.mobile.dev" | bash
-          echo "$HOME/.maestro/bin" >> $GITHUB_PATH
+          npm install -g pnpm
+          pnpm install
 
-      - name: 🍏 Build iOS (Simulator)
+      - name: Install Maestro
+        run: pnpm run install-maestro
+
+      - name: Load Env Variables
         run: |
-          cd ios
-          xcodebuild \
-            -workspace YourApp.xcworkspace \
-            -scheme YourApp \
-            -sdk iphonesimulator \
-            -configuration Release \
-            -derivedDataPath build
+          echo "EXPO_PUBLIC_APP_ENV=development" >> $GITHUB_ENV
 
-      - name: 📱 Boot iOS Simulator
+      - name: Build iOS Dev Client
+        run: pnpm ios:development
+
+      - name: Boot iOS Simulator & Run Maestro
         run: |
           xcrun simctl boot "iPhone 14" || true
           sleep 20
-
-      - name: 🧪 Run Maestro on iOS
-        run: |
           maestro test .maestro/ \
-            --format junit \
-            --output ios-report.xml \
-            --env=APP_ID=com.obytes.development
+            -e APP_ID=com.obytes.development \
+            --format html \
+            --output maestro-ios-report.html
 
-      - name: 📤 Upload iOS Test Report
-        if: always()
-        uses: actions/upload-artifact@v3
+      - name: Upload iOS Report
+        uses: actions/upload-artifact@v4
         with:
-          name: ios-e2e-report
-          path: ios-report.xml
+          name: maestro-ios-report
+          path: maestro-ios-report.html
