--- a/.github/workflows/e2e-mobile.yml
+++ b/.github/workflows/e2e-mobile.yml
@@ -30,8 +30,14 @@ jobs:
         run: |
           echo "EXPO_PUBLIC_APP_ENV=development" >> $GITHUB_ENV
 
-      - name: Build Android Dev Client
-        run: pnpm android:development
+      - name: Prebuild Native Projects
+        run: pnpm prebuild:development
+
+      - name: Build Android Debug APK
+        run: |
+          cd android
+          ./gradlew assembleDebug
+          cd ..
 
       - name: Start Emulator & Run Maestro
         uses: reactivecircus/android-emulator-runner@v2
@@ -55,7 +61,7 @@ jobs:
 
 
   ios-e2e:
-    name: iOS E2E (Maestro Local)
+    name: iOS E2E (Maestro Local via EAS Build)
     runs-on: macos-latest
 
     steps:
@@ -79,11 +85,21 @@ jobs:
         run: |
           echo "EXPO_PUBLIC_APP_ENV=development" >> $GITHUB_ENV
 
-      - name: Build iOS Dev Client
-        run: pnpm ios:development
-
-      - name: Boot iOS Simulator & Run Maestro
+      - name: Build iOS via EAS
         run: |
+          pnpm build:development:ios
+        env:
+          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
+
+      - name: Download iOS IPA
+        uses: actions/download-artifact@v3
+        with:
+          name: ios-build
+          path: ios-app.ipa
+
+      - name: Run Maestro on iOS Simulator
+        run: |
+          # This requires local Mac, may fail in CI runner without proper simulator setup
           xcrun simctl boot "iPhone 14" || true
           sleep 20
           maestro test .maestro/ \
