--- a/.github/workflows/e2e-mobile.yml
+++ b/.github/workflows/e2e-mobile.yml
@@ -35,14 +35,17 @@ jobs:
         run: echo "EXPO_PUBLIC_APP_ENV=development" >> $GITHUB_ENV
 
       # ----------------------------------------
-      # Setup Google Cloud SDK (THIS FIXES YOUR ERROR)
+      # PROPER GOOGLE AUTH (Fixes 401 issue)
       # ----------------------------------------
-      - name: Setup Google Cloud SDK
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Setup gcloud SDK
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
 
       # ----------------------------------------
       # Cache Gradle
@@ -76,7 +79,7 @@ jobs:
           gs://${{ secrets.GCP_TESTLAB_BUCKET }}/apks/latest.apk
 
       # ----------------------------------------
-      # Run Maestro on Firebase Test Lab (using GCS APK)
+      # Run Maestro on Firebase Test Lab
       # ----------------------------------------
       - name: Run Maestro on Firebase Test Lab
         run: |
