--- a/.github/workflows/e2e-mobile.yml
+++ b/.github/workflows/e2e-mobile.yml
@@ -35,12 +35,12 @@ jobs:
         run: echo "EXPO_PUBLIC_APP_ENV=development" >> $GITHUB_ENV
 
       # ----------------------------------------
-      # PROPER GOOGLE AUTH (Fixes 401 issue)
+      # PROPER GOOGLE AUTH
       # ----------------------------------------
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
+          credentials_json: ${{ secrets.GCP_SA_KEY_JSON }}
 
       - name: Setup gcloud SDK
         uses: google-github-actions/setup-gcloud@v2
