--- a/.github/workflows/e2e-mobile.yml
+++ b/.github/workflows/e2e-mobile.yml
@@ -78,30 +78,27 @@ jobs:
       #     gsutil cp android/app/build/outputs/apk/debug/app-debug.apk \
       #     gs://${{ secrets.GCP_TESTLAB_BUCKET }}/apks/latest.apk
 
-            # ----------------------------------------
+      # ----------------------------------------
+      # Prepare Maestro Test Sources in android/androidTest
+      # ----------------------------------------
+      - name: Copy Maestro Test Files
+        run: |
+          mkdir -p android/app/src/androidTest/assets
+          mkdir -p android/app/src/androidTest/java/com/company/maestro
+          cp -R .maestro/app/*.yaml android/app/src/androidTest/assets/
+          cp -R android-tests/app/src/androidTest/java/com/company/maestro/* \
+                 android/app/src/androidTest/java/com/company/maestro/
+
+      # ----------------------------------------
       # Build Maestro Test APK
       # ----------------------------------------
       - name: Build Maestro Test APK
         run: |
-          cd android-tests
+          cd android
           ./gradlew assembleDebugAndroidTest
           cd ..
-          # Upload test APK to GCS
-          gsutil cp android-tests/app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk \
+          gsutil cp android/app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk \
             gs://${{ secrets.GCP_TESTLAB_BUCKET }}/apks/test.apk
-
-      # ----------------------------------------
-      # Run Maestro tests on Firebase Test Lab
-      # ----------------------------------------
-      - name: Run Maestro on Firebase Test Lab
-        run: |
-          gcloud firebase test android run \
-            --type instrumentation \
-            --app gs://${{ secrets.GCP_TESTLAB_BUCKET }}/apks/latest.apk \
-            --test gs://${{ secrets.GCP_TESTLAB_BUCKET }}/apks/test.apk \
-            --results-bucket ${{ secrets.GCP_TESTLAB_BUCKET }} \
-            --results-dir maestro-results \
-            --device model=Pixel2.arm,version=33,locale=en,orientation=portrait
 
       # ----------------------------------------
       # Download Results
