--- a/.github/workflows/e2e-mobile.yml
+++ b/.github/workflows/e2e-mobile.yml
@@ -50,25 +50,25 @@ jobs:
       # ----------------------------------------
       # Cache Gradle
       # ----------------------------------------
-      # - name: Cache Gradle
-      #   uses: actions/cache@v3
-      #   with:
-      #     path: |
-      #       ~/.gradle/caches
-      #       ~/.gradle/wrapper
-      #     key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+      - name: Cache Gradle
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
 
       # ----------------------------------------
       # Prebuild + Build APK
       # ----------------------------------------
-      # - name: Prebuild Native Projects
-      #   run: pnpm prebuild:development
+      - name: Prebuild Native Projects
+        run: pnpm prebuild:development
 
-      # - name: Build Android Debug APK
-      #   run: |
-      #     cd android
-      #     ./gradlew assembleDebug
-      #     cd ..
+      - name: Build Android Debug APK
+        run: |
+          cd android
+          ./gradlew assembleDebug
+          cd ..
 
       # ----------------------------------------
       # Upload APK to GCS (overwrite latest)
